tests/baselines/reference/S7.8.5_A1.2_T4.errors.txt
S7.8.5_A1.2_T4.ts(26,1): error TS1128: Declaration or statement expected.
S7.8.5_A1.2_T4.ts(26,2): error TS2304: Cannot find name 'source'.


==== S7.8.5_A1.2_T4.ts (2 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: sec-literals-regular-expression-literals
    info: |
      RegularExpressionLiteral::
        / RegularExpressionBody / RegularExpressionFlags
    
      RegularExpressionBody ::
        RegularExpressionFirstChar RegularExpressionChars
    
      RegularExpressionChars::
        [empty]
    
      MemberExpression . IdentifierName
    
    description: A regular expression may not be empty.
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    //
    .source;
    ~
!!! error TS1128: Declaration or statement expected.
     ~~~~~~
!!! error TS2304: Cannot find name 'source'.
    